# llm-observability

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ai-pr-review.yml  ci.yml
aiobs/: __init__.py  collector.py  observe.py  tracer.py
aiobs/evals/: Toxicity_evals.py  __init__.py  test.ipynb
aiobs/evals/correctness/: __init__.py  math_code_correctness.py  sql_query_validator.py
aiobs/evals/models/: __init__.py  configs.py
aiobs/evals/safety/: __init__.py  pii_detection.py  toxicity_detection.py
aiobs/exporters/: __init__.py  s3.py
aiobs/models/: observability.py
aiobs/providers/gemini/: __init__.py  provider.py
aiobs/providers/openai/: __init__.py  provider.py
benchmarks/: halueval_qa.ipynb  halueval_qa.py  toxicity_benchmark.py
docs/: api.rst  architecture.rst  conf.py  evals.rst  getting_started.rst  index.rst  usage.rst
docs/_static/: custom.css
example/classifier/: async_example.py  main.py  requirements.txt
example/evals/: hallucination_detection_example.py  math_code_correctness_example.py  sql_query_validator_example.py  toxicity_detection_example.py
example/gemini/: main.py
example/observe-decorator/: main.py  requirements.txt
example/pipeline/: requirements.txt
example/pipeline/tasks/: critique.py
tests/: conftest.py  test_async_flush.py  test_evals.py  test_exporters.py  test_gemini_generate_videos.py  test_gemini_instrumentation.py  test_observability_core.py  test_observe_decorator.py  test_openai_instrumentation.py
