[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "aiobs"
version = "0.1.5"
description = "Minimal, extensible LLM observability SDK with OpenAI and Gemini support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "aiobs Authors" }
]
keywords = ["llm", "observability", "tracing", "openai", "gemini", "genai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "furo>=2024.1.29",
  "openai>=1.0.0,<2",
  "pydantic>=2",
  "pytest>=7",
  "python-dotenv>=1.0",
  "sphinx>=7",
  "sphinx-copybutton>=0.5.2",
]

[project.optional-dependencies]
openai = [
  "openai>=1.0.0,<2",
]
gemini = [
  "google-genai>=1.0.0",
]
example = [
  "python-dotenv>=1.0",
]
test = [
  "pytest>=7",
]
docs = [
  "sphinx>=7",
  "furo>=2024.1.29",
  "sphinx-copybutton>=0.5",
]
all = [
  "aiobs[openai,gemini,example]",
]

[project.urls]
Homepage = "https://github.com/neuralis-in/aiobs"
Repository = "https://github.com/neuralis-in/aiobs"
Documentation = "https://neuralis-in.github.io/aiobs/"

[tool.hatch.build]
exclude = [
  ".venv",
  "example",
  ".git",
  "dist",
  "build",
]
